// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hello Superman 1`] = `"{\\"type\\":\\"oc-component-local\\",\\"version\\":\\"1.0.0\\",\\"requestVersion\\":\\"\\",\\"name\\":\\"hello-world\\",\\"renderMode\\":\\"rendered\\",\\"href\\":\\"http://localhost:3030/hello-world?name=Superman\\",\\"html\\":\\"<div>Hello Superman</div>\\"}"`;

exports[`when name is "" 1`] = `
Object {
  "name": "John Doe",
}
`;

exports[`when name is "Jane Doe" 1`] = `
Object {
  "name": "Jane Doe",
}
`;

exports[`when name is "Zlatan Ibrahimović" 1`] = `
Object {
  "name": "Zlatan Ibrahimović",
}
`;

exports[`when name is "null" 1`] = `
Object {
  "name": "John Doe",
}
`;

exports[`when name is "undefined" 1`] = `
Object {
  "name": "John Doe",
}
`;
